docs/api/qiskit/1.2/qiskit.qobj.QobjHeader.mdx
---
title: QobjHeader (v1.2)
description: API reference for qiskit.qobj.QobjHeader in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.QobjHeader
---

# QobjHeader

<Class id="qiskit.qobj.QobjHeader" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/common.py#L72-L75" signature="qiskit.qobj.QobjHeader(**kwargs)" modifiers="class">
  Bases: `QobjDictField`

  A class used to represent a dictionary header in Qobj objects.

  Instantiate a new Qobj dict field object.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.qobj.common.QobjDictField` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The Qobj class and related functionality are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires Qobj it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  **kwargs** – arbitrary keyword arguments that can be accessed as attributes of the object.

  ## Methods

  ### from\_dict

  <Function id="qiskit.qobj.QobjHeader.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/common.py#L51-L63" signature="from_dict(data)" modifiers="classmethod">
    Create a new QobjHeader object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary representing the QobjHeader to create. It will be in the same format as output by [`to_dict()`](#qiskit.qobj.QobjHeader.to_dict "qiskit.qobj.QobjHeader.to_dict").

    **Returns**

    The QobjDictField from the input dictionary.

    **Return type**

    QobjDictFieldr
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.QobjHeader.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/common.py#L43-L49" signature="to_dict()">
    Return a dictionary format representation of the OpenQASM 2 Qobj.

    **Returns**

    The dictionary form of the QobjHeader.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

